--- a/index.qmd
+++ b/index.qmd
@@ -10,8 +10,7 @@ about:
     - icon: github
       text: GitHub
       url: https://github.com/dylanbretzjr
-    - icon: email
-      text: Email
+    - text: "{{< fa envelope >}} Email"
       url: mailto:dylanbretzjr@gmail.com
 image: /img/portrait.jpg
 ---
