--- a/index.qmd
+++ b/index.qmd
@@ -19,20 +19,27 @@ format:
       body-width: 1000px
 ---
 
-# 🚧 This site is under construction 🚧
+# Hello 👋
 
-Please come back soon to see what's built!
-
-## Bio
+My name is Dylan :)
 
 I'm a musician, problem solver, and lifelong learner transitioning to data analytics.
 
-{{< lipsum 2 >}}
+I bring a unique blend of analytical, creative, and critical thinking to everything I do.
 
-## Education
+I'm currently building my portfolio, obtaining certifications, and refining my technical skills.
 
-{{< lipsum 1 >}}
+I use Python, SQL, R, JavaScript, HTML/CSS, and Markdown, as well as spreadsheets and Tableau.
 
-## Personal life
+I'm currently seeking entry-level Data Analyst roles (remote preferred).
 
-{{< lipsum 1 >}}
+I'm based in Ohio but open to relocating (esp. to PNW 🌲).
+
+**Recently completed:**
+
+- Google Data Analysis with Python Specialization
+- Google Data Analytics Specialization
+
+Outside of work, I enjoy watching movies, listening to music, reading, spending time outdoors, and healthy living.
+
+Thanks for stopping by---more coming soon!
