--- a/index.qmd
+++ b/index.qmd
@@ -31,7 +31,7 @@ I'm currently building my portfolio, obtaining certifications, and refining my t
 
 I use Python, SQL, R, JavaScript, HTML/CSS, and Markdown, as well as spreadsheets and Tableau.
 
-I'm currently seeking entry-level Data Analyst roles (remote preferred).
+I'm currently seeking Data Analyst roles (remote preferred).
 
 I'm based in Ohio but open to relocating (esp. to PNW 🌲).
 
