--- a/index.qmd
+++ b/index.qmd
@@ -37,6 +37,7 @@ I'm based in Ohio but open to relocating (esp. to PNW 🌲).
 
 **Recently completed:**
 
+- [Cyclistic Bike-Share Data Analysis with Python Case Study](https://dylanbretzjr.com/projects/cyclistic-case-study/)
 - Google Data Analysis with Python Specialization
 - Google Data Analytics Specialization
 
