--- a/index.qmd
+++ b/index.qmd
@@ -39,8 +39,9 @@ I'm based in Ohio but open to relocating (esp. to PNW 🌲).
 **Recently completed:**
 
 - [Cyclistic Bike-Share Data Analysis with Python Case Study](https://dylanbretzjr.com/projects/cyclistic-case-study/)
+- Google Data Analytics Professional Certificate
 - Google Data Analysis with Python Specialization
-- Google Data Analytics Specialization
+- Google Data-Driven Decision Making Specialization
 
 Outside of work, I enjoy watching movies, listening to music, reading, spending time outdoors, and healthy living.
 
