Add 'data visualization' and 'etl' categories

--- a/projects/cyclistic-case-study/index.qmd
+++ b/projects/cyclistic-case-study/index.qmd
@@ -5,7 +5,9 @@ date: "2026-01-19"
 categories:
   - case study
   - data analysis
+  - data visualization
   - python
+  - etl
 image: cyclistic_logo.png
 ---
 
